--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,9 +6,16 @@
 			<div class="well well-lg">
 				<div class="article-title">
 					<%= link_to  a.title, article_path(a) %>
+
 				</div>
 				<div class="article-body">
-					<%= truncate(a.description, length:100) %>
+					<%= truncate(a.description, length:100) %> <br/>
+					<div class="articles-meta-data">
+						<small>Created By: <%= a.user.username if a.user %>
+										Created at: <%= time_ago_in_words(a.created_at) %> ago,
+										Updated at: <%= time_ago_in_words(a.updated_at) %> ago
+						</small>
+				</div>
 				</div>
 				<div class="article-actions">
 					<%= link_to "Edit Article", edit_article_path(a), class: "btn btn-xs btn-primary" %>
