--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,4 @@
 <h2 align="center"> Listing all the articles </h2>
 
-<% @articles.each do |a| %>
-	<div class="row">
-		<div class="col-xs-8 col-xs-offset-2">
-			<div class="well well-lg">
-				<div class="article-title">
-					<%= link_to  a.title, article_path(a) %>
-
-				</div>
-				<div class="article-body">
-					<%= truncate(a.description, length:100) %> <br/>
-					<div class="articles-meta-data">
-						<small>Created By: <%= a.user.username if a.user %>
-										Created at: <%= time_ago_in_words(a.created_at) %> ago,
-										Updated at: <%= time_ago_in_words(a.updated_at) %> ago
-						</small>
-				</div>
-				</div>
-				<div class="article-actions">
-					<%= link_to "Edit Article", edit_article_path(a), class: "btn btn-xs btn-primary" %>
-					<%= link_to "Delete this Article", article_path(a), method: :delete,
-										   data:{confirm: "Are you sure?"},
-										   class: "btn btn-xs btn-danger" %>
-				</div>
-			</div>
-		</div>
-	</div>
-<% end %>
+<%= render 'article',obj: @articles %>
 
