--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,33 +32,37 @@
                     <%= link_to "Articles", articles_path %>
                 </li>
 
-                <li><a href="#">Link</a></li>
+                <li><%= link_to "Users", users_path %></li>
 
-                <li class="dropdown">
+                <% if logged_in? %>
 
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+                    <li class="dropdown">
 
-                    <ul class="dropdown-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
 
-                        <li>
-                            <%= link_to "New Article", new_article_path %>
-                        </li>
+                        <ul class="dropdown-menu">
 
-                        <li><a href="#">Another action</a></li>
+                            <li>
+                                <%= link_to "New Article", new_article_path %>
+                            </li>
 
-                        <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Another action</a></li>
 
-                        <li role="separator" class="divider"></li>
+                            <li><a href="#">Something else here</a></li>
 
-                        <li><a href="#">Separated link</a></li>
+                            <li role="separator" class="divider"></li>
 
-                        <li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
 
-                        <li><a href="#">One more separated link</a></li>
+                            <li role="separator" class="divider"></li>
 
-                    </ul>
+                            <li><a href="#">One more separated link</a></li>
 
-                </li>
+                        </ul>
+
+                    </li>
+
+                <% end %>
 
             </ul>
 
@@ -81,13 +85,13 @@
 
                         <li class="dropdown">
 
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <span class="caret"></span></a>
 
                             <ul class="dropdown-menu">
 
-                                <li><a href="#">Action</a></li>
+                                <li><%= link_to "Edit your Profile" , edit_user_path(current_user) %></li>
 
-                                <li><a href="#">Another action</a></li>
+                                <li><%= link_to "View your profile", user_path(current_user) %></li>
 
                                 <li><a href="#">Something else here</a></li>
 
